--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ação Limpa Nome - Positivo Nacional</title>
+  <title>Ação Limpa Nome - Simulação WhatsApp</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -140,7 +140,7 @@
       <!-- Mensagens vão aparecer aqui -->
     </div>
     <div class="chat-footer">
-      <a class="cta-btn" href="https://wa.me/5541984475963?text=Olá!%20Quero%20participar%20da%20Ação%20Limpa%20Nome." target="_blank">
+      <a class="cta-btn" href="https://wa.me/5511946174111?text=Olá!%20Quero%20participar%20da%20Ação%20Limpa%20Nome." target="_blank">
         Falar com Atendente no WhatsApp
       </a>
     </div>
@@ -154,12 +154,8 @@
       { tipo: 'user', texto: 'Sério? Mesmo com dívidas ativas?' },
       { tipo: 'bot', texto: 'Sim. A liminar suspende a negativação. A dívida continua existindo, mas o nome fica limpo, e você fica livre para abrir contas em bancos que você não tem dívidas, fazer financiamentos, ter cartões de crédito...' },
       { tipo: 'user', texto: 'E quanto custa isso tudo?' },
-      { tipo: 'bot', texto: 'Antes de te falar o nosso preço, preciso que você saiba que aqui não tem golpe!' },
-      { tipo: 'bot', texto: '✔ Primeiro limpamos o seu CPF' }
-      { tipo: 'bot', texto: '✔ Só após estar com seu nome limpo é que você começa a nos pagar' },
-      { tipo: 'bot', texto: '✔ Parcelamos nosso serviço no boleto!' }
-      { tipo: 'bot', texto: 'Nós somos a única empresa do país que só te cobra qualquer valor após o serviço estar CONCLUÍDO.... Ou seja, não te cobramos nenhum valor ou taxa antes!' },
-      { tipo: 'bot', texto: 'Agora... quer saber o preço do nosso serviço e ter mais informações? Então clique abaixo e fale com a gente no whatsapp!! 💬' }
+      { tipo: 'bot', texto: 'Nós somos a única empresa do país que só te cobra qualquer valor após o serviço estar CONCLUÍDO.... Ou seja, não te cobramos NADA antes, aqui não tem golpe!' },
+      { tipo: 'bot', texto: 'Quer saber o preço do nosso serviço? Clique abaixo e fale com a gente no whatsapp!! 💬' }
     ];
 
     let index = 0;
