--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
       { tipo: 'bot', texto: 'Sim. A liminar suspende a negativação. A dívida continua existindo, mas o nome fica limpo, e você fica livre para abrir contas em bancos que você não tem dívidas, fazer financiamentos, ter cartões de crédito...' },
       { tipo: 'user', texto: 'E quanto custa isso tudo?' },
       { tipo: 'bot', texto: 'Nós somos a única empresa do país que só te cobra qualquer valor após o serviço estar CONCLUÍDO.... Ou seja, não te cobramos NADA antes, aqui não tem golpe!' },
+      { tipo: 'bot', texto: 'Inclusive já saímos em várias matérias de jornais e revistas conhecidas no Brasil por sermos referência nesse tipo de ação!' },
+      { tipo: 'bot', texto: 'Nossa transparência é o que mais chama atenção: você só paga depois que o serviço estiver entregue, sem enganação.' },
       { tipo: 'bot', texto: 'Quer saber o preço do nosso serviço? Clique abaixo e fale com a gente no whatsapp!! 💬' }
     ];
 
