--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ação Limpa Nome - Positivo Nacional 2</title>
+  <title>Ação Limpa Nome - Tatiane Moreira</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -130,7 +130,7 @@
       <img src="https://raw.githubusercontent.com/tatianemsimao/positivonacional/refs/heads/main/SIMBOLO%20P%20-%20Positivo%20Nacional%20(avatar).png" alt="Foto de perfil">
       <div class="info">
         <div class="name">
-          Positivo Nacional
+          Positivo Nacional | Tatiane
           <img src="https://upload.wikimedia.org/wikipedia/commons/e/e4/Twitter_Verified_Badge.svg" alt="Verificado">
         </div>
         <div class="status">online</div>
@@ -140,7 +140,7 @@
       <!-- Mensagens vão aparecer aqui -->
     </div>
     <div class="chat-footer">
-      <a class="cta-btn" href="https://wa.me/5541984475963?text=Olá!%20Quero%20participar%20da%20Ação%20Limpa%20Nome." target="_blank">
+      <a class="cta-btn" href="https://wa.me/5511946174111?text=Olá!%20Quero%20participar%20da%20Ação%20Limpa%20Nome%20na%20promoção%20TPS072025%20(não%20apagar)%20" target="_blank">
         Falar com Atendente no WhatsApp
       </a>
     </div>
@@ -155,8 +155,6 @@
       { tipo: 'bot', texto: 'Sim. A liminar suspende a negativação. A dívida continua existindo, mas o nome fica limpo, e você fica livre para abrir contas em bancos que você não tem dívidas, fazer financiamentos, ter cartões de crédito...' },
       { tipo: 'user', texto: 'E quanto custa isso tudo?' },
       { tipo: 'bot', texto: 'Nós somos a única empresa do país que só te cobra qualquer valor após o serviço estar CONCLUÍDO.... Ou seja, não te cobramos NADA antes, aqui não tem golpe!' },
-      { tipo: 'bot', texto: 'Inclusive já saímos em várias matérias de jornais e revistas conhecidas no Brasil por sermos referência nesse tipo de ação!' },
-      { tipo: 'bot', texto: 'Nossa transparência é o que mais chama atenção: você só paga depois que o serviço estiver entregue, sem enganação.' },
       { tipo: 'bot', texto: 'Quer saber o preço do nosso serviço? Clique abaixo e fale com a gente no whatsapp!! 💬' }
     ];
 
