--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <!-- Mensagens vão aparecer aqui -->
     </div>
     <div class="chat-footer">
-      <a class="cta-btn" href="https://wa.me/5511946174111?text=Olá!%20Quero%20participar%20da%20Ação%20Limpa%20Nome." target="_blank">
+      <a class="cta-btn" href="https://wa.me/5541984708345?text=Olá!%20Quero%20participar%20da%20Ação%20Limpa%20Nome%20na%20promoção%20TPS072025%20(não%20apagar)" target="_blank">
         Falar com Atendente no WhatsApp
       </a>
     </div>
